crates/python_parser/tests/snapshots/invalid_syntax@expressions__bin_op__missing_rhs_0.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/bin_op/missing_rhs_0.py
---
## AST

```
Module(
    ModModule {
        range: 0..10,
        body: [
            Expr(
                ExprStmt {
                    range: 0..3,
                    value: BinOp(
                        BinOpExpr {
                            range: 0..3,
                            left: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 0..1,
                                    value: Int(
                                        0,
                                    ),
                                },
                            ),
                            op: Add,
                            right: Name(
                                NameExpr {
                                    range: 3..3,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 5..10,
                    value: BinOp(
                        BinOpExpr {
                            range: 5..10,
                            left: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 5..6,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            op: Add,
                            right: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 9..10,
                                    value: Int(
                                        2,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | 0 +
  |    ^ Syntax Error: Expected an expression
2 | 
3 | 1 + 2
  |
