crates/python_parser/tests/snapshots/invalid_syntax@expressions__bin_op__missing_rhs_1.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/bin_op/missing_rhs_1.py
---
## AST

```
Module(
    ModModule {
        range: 0..18,
        body: [
            Expr(
                ExprStmt {
                    range: 0..11,
                    value: BinOp(
                        BinOpExpr {
                            range: 0..11,
                            left: BinOp(
                                BinOpExpr {
                                    range: 0..5,
                                    left: NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 0..1,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    op: Add,
                                    right: NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 4..5,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            op: Sub,
                            right: BinOp(
                                BinOpExpr {
                                    range: 8..11,
                                    left: NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 8..9,
                                            value: Int(
                                                3,
                                            ),
                                        },
                                    ),
                                    op: Mult,
                                    right: Name(
                                        NameExpr {
                                            range: 11..11,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 13..18,
                    value: BinOp(
                        BinOpExpr {
                            range: 13..18,
                            left: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 13..14,
                                    value: Int(
                                        4,
                                    ),
                                },
                            ),
                            op: Add,
                            right: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 17..18,
                                    value: Int(
                                        5,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | 1 + 2 - 3 *
  |            ^ Syntax Error: Expected an expression
2 | 
3 | 4 + 5
  |
